--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
@@ -270,15 +270,9 @@
 
           <mat-expansion-panel class="expansion-style sub-expansion-black">
             <mat-expansion-panel-header class="expansion-style--header">
-              <mat-panel-title
-                class="expansion-style--title"
-                [ngClass]="
-                  estadoSemaforosObservaciones.observacionCriteriosProyecto === true
-                    ? 'en-proceso'
-                    : enabledAcordeonSubFase('detalleFactura', true)
-                "
-              >
-                Detalle factura para proyectos asociados
+              <mat-panel-title  class="expansion-style--title"
+                                [ngClass]="estadoSemaforosObservaciones.observacionCriteriosProyecto === true ? 'en-proceso' : enabledAcordeonSubFase('detalleFactura', true)">
+                                Detalle factura para proyectos asociados
               </mat-panel-title>
             </mat-expansion-panel-header>
             <app-detalle-factura-proyectos-asociados
