--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/embedded-power-bi/embedded-power-bi.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/embedded-power-bi/embedded-power-bi.component.html
@@ -1,3 +1,10 @@
-<section id="report">
-  <div class="reportContainer" #reportContainer></div>
+<section class="container">
+  <div class="text-right mb-1-5em">
+    <a routerLink=".." mat-button color="primary" class="btn-regresar">
+      <img src="assets/img/icon/regresar.svg" alt="Regresar" />
+    </a>
+  </div>
+  <section id="report">
+    <div class="reportContainer" #reportContainer></div>
+  </section>
 </section>
