--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/reportes-estandar/reportes-estandar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/reportes-estandar/reportes-estandar.component.html
@@ -2,7 +2,7 @@
   <div class="text-center mb-1-5em">
     <h1 class="title-menu--h1">Reportes estándar</h1>
   </div>
-  <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+  <form [formGroup]="addressForm" novalidate (ngSubmit)="showReport()">
     <mat-card class="shipping-card">
       <mat-card-header class="header-card header-card--margin">
         <mat-card-title class="header-card--text"> Filtro de búsqueda </mat-card-title>
@@ -22,7 +22,7 @@
               </div>
               <div class="col">
                 <mat-form-field class="select-width">
-                  <mat-select formControlName="etapa">
+                  <mat-select formControlName="etapa" required>
                     <mat-option *ngFor="let etapa of etapaArray" [value]="etapa.code">
                       {{ etapa.name }}
                     </mat-option>
@@ -48,7 +48,7 @@
               </div>
               <div class="col">
                 <mat-form-field class="select-width">
-                  <mat-select formControlName="procesoAcuerdo">
+                  <mat-select formControlName="procesoAcuerdo" required>
                     <mat-option *ngFor="let procesoAcuerdo of procesoAcuerdoArray" [value]="procesoAcuerdo.code">
                       {{ procesoAcuerdo.name }}
                     </mat-option>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col">
                   <mat-form-field class="select-width">
-                    <mat-select formControlName="reporte" required (ngModelChange)="selectedOption($event)">
+                    <mat-select formControlName="reporte" required>
                       <mat-option *ngFor="let reporte of reporteArray" [value]="reporte.indicadorReporteId">
                         {{ reporte.nombre }}
                       </mat-option>
@@ -86,78 +86,10 @@
             </div>
           </div>
         </div>
-
-        <div
-          class="animatedDown"
-          *ngIf="
-            addressForm.get('procesoAcuerdo').value && addressForm.get('procesoAcuerdo').value.value == 'Contratación'
-          "
-        >
-          <div class="row">
-            <div class="col-md-12">
-              <div class="row">
-                <div class="pr-1">
-                  <label
-                    class="label-left"
-                    for="departamento"
-                    [class.color-secondaryColor]="
-                      addressForm.get('departamento').invalid && addressForm.get('departamento').touched
-                    "
-                  >
-                    Departamento
-                  </label>
-                </div>
-                <div class="col">
-                  <mat-form-field class="select-width capitalize">
-                    <mat-select formControlName="departamento" (selectionChange)="getMunicipio($event)" required>
-                      <mat-option
-                        *ngFor="let contr of departamentoArray"
-                        [value]="contr.localizacionId"
-                        class="capitalize"
-                      >
-                        {{ contr.descripcion }}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="row">
-                <div class="pr-1">
-                  <label
-                    class="label-left"
-                    for="municipio"
-                    [class.color-secondaryColor]="
-                      addressForm.get('municipio').invalid && addressForm.get('municipio').touched
-                    "
-                  >
-                    Municipio
-                  </label>
-                </div>
-                <div class="col">
-                  <mat-form-field class="select-width capitalize">
-                    <mat-select formControlName="municipio" required>
-                      <mat-option
-                        *ngFor="let contr of municipioArray"
-                        [value]="contr.localizacionId"
-                        class="capitalize"
-                      >
-                        {{ contr.descripcion }}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="text-center mt-1em">
+          <button mat-raised-button color="accent" type="submit" [disabled]="addressForm.invalid">Ver reporte</button>
         </div>
       </mat-card-content>
     </mat-card>
   </form>
-  <div *ngIf="embedInfo" class="animatedDown mt-1em">
-    <app-embedded-power-bi [embedInfo]="embedInfo"></app-embedded-power-bi>
-  </div>
 </section>
