--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
@@ -27,21 +27,24 @@
       <p><strong>Valor fase 1 - Preconstrucción (Estudios y diseños): </strong>{{ this.valorFase1Preconstruccion  | currency: '':'symbol-narrow':'.0-0'  }}</p>
       <p><strong>Valor fase 2 - Construcción (Obra): </strong>{{ this.valorfase2ConstruccionObra  | currency: '':'symbol-narrow':'.0-0'  }}</p> 
       <div *ngIf="this.valorProponente == '1'">
-        <p><strong>Número de identificación del representante legal del contratista de inteventoría: </strong></p>
-        <p><strong>Nombre del representante legal del contratista de interventoría: </strong></p>
-        <p>
+        <!--
+          Se comentan estos campos ya que no esta definiendo ninguna variable a mostrar - Carlos Molero 08/07/2021
+          <p><strong>Número de identificación del representante legal del contratista de inteventoría: </strong></p>
+          <p><strong>Nombre del representante legal del contratista de interventoría: </strong></p>
+        -->
+        <p *ngIf="contrato.usuarioInterventoria !== undefined">
           <strong>Número de identificación del contratista de interventoría: </strong>
           {{ this.contrato.usuarioInterventoria.numeroIdentificacion }}
         </p>
-        <p>
+        <p *ngIf="contrato.usuarioInterventoria !== undefined">
           <strong>Nombre de la entidad contratista de interventoría: </strong
           >{{ this.contrato.usuarioInterventoria.primerNombre }} {{ this.contrato.usuarioInterventoria.primerApellido }}
         </p>
-        <p>
+        <p *ngIf="numeroIdentificacionRepresentanteContratistaInterventoria !== undefined">
           <strong>Número de identificación del representante legal del contratista de obra: </strong
           >{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}
         </p>
-        <p>
+        <p *ngIf="nombreEntidadContratistaSupervisorInterventoria !== undefined">
           <strong>Nombre del representante legal del contratista de obra: </strong
           >{{ this.nombreEntidadContratistaSupervisorInterventoria }}
         </p>
