--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/expansion-panel-detallar-solicitud/expansion-panel-detallar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/expansion-panel-detallar-solicitud/expansion-panel-detallar-solicitud.component.html
@@ -120,7 +120,7 @@
             <mat-card class="border" style="margin-top: 3em;">
                 <mat-card-content class="mt-1em">
                     <app-plazo-ejecucion  (guardar)="onSubmitTerm($event)"             
-                    [tipoSolicitud]="contratacion.tipoSolicitudCodigo" [plazoProyecto]="plazoProyecto" [plazoContratacion]="contratacion.plazoContratacion"></app-plazo-ejecucion>   
+                    [tipoSolicitudCodigo]="contratacion.tipoSolicitudCodigo" [plazoProyecto]="plazoProyecto" [plazoContratacion]="contratacion.plazoContratacion"></app-plazo-ejecucion>   
                 </mat-card-content>
             </mat-card>          
             </mat-expansion-panel>  
