--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/tabla-registro-seguimiento-diario/tabla-registro-seguimiento-diario.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/tabla-registro-seguimiento-diario/tabla-registro-seguimiento-diario.component.html
@@ -45,8 +45,8 @@
     <ng-container matColumnDef="fechaUltimoSeguimientoDiario">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha del último reporte</th>
       <td [ngSwitch]="element.fechaUltimoSeguimientoDiario" mat-cell *matCellDef="let element">
-        <section *ngSwitchCase="undefined"> Sin registro  </section> 
-        <section *ngSwitchDefault> {{element.fechaUltimoSeguimientoDiario | date: 'dd/MM/yyyy'}} </section> 
+        <section *ngSwitchCase="undefined"> Sin registro  </section>
+        <section *ngSwitchDefault> {{element.fechaUltimoSeguimientoDiario | date: 'dd/MM/yyyy'}} </section>
       </td>
         <!-- <td *ngSwitchDefault mat-cell *matCellDef="let element">{{element.fechaUltimoSeguimientoDiario | date: 'dd/MM/yyyy'}} </td> -->
     </ng-container>
@@ -56,54 +56,54 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
 
-        <a mat-button color="warn" 
-                      mat-raised-button color="accent" 
-                      class="btn-table" 
+        <a mat-button color="warn"
+                      mat-raised-button color="accent"
+                      class="btn-table"
                       type="button"
-                      (click)="Enviar( element.seguimientoDiarioId )" 
-                      *ngIf="element.registroCompleto && element.estadoCodigo === '1'" >
+                      (click)="Enviar( element.seguimientoDiarioId )"
+                      *ngIf="(element.registroCompleto && element.estadoCodigo === '1') && element.cumpleCondicionesTai === false" >
         Enviar seguimiento diario
         </a>
 
-        <a mat-button color="warn" 
-                      mat-raised-button color="accent" 
-                      class="btn-table" 
+        <a mat-button color="warn"
+                      mat-raised-button color="accent"
+                      class="btn-table"
                       type="button"
-                      (click)="RegistrarNuevo( element )" 
-                      *ngIf="element.estadoCodigo !== '1'" >
+                      (click)="RegistrarNuevo( element )"
+                      *ngIf="(element.estadoCodigo !== '1') && element.cumpleCondicionesTai === false" >
         Registrar seguimiento diario
         </a>
 
-        <a mat-button color="warn" 
-                      mat-raised-button color="accent" 
-                      class="btn-table {{ 
-                                ( element.registroCompletoTieneObservaciones !== true && element.tieneObservaciones === true ) ? 
+        <a mat-button color="warn"
+                      mat-raised-button color="accent"
+                      class="btn-table {{
+                                ( element.registroCompletoTieneObservaciones !== true && element.tieneObservaciones === true ) ?
                                 'info-text sin-diligenciar' :
-                                    ( element.registroCompletoTieneObservaciones === true && element.tieneObservaciones === true ) ? 
+                                    ( element.registroCompletoTieneObservaciones === true && element.tieneObservaciones === true ) ?
                                     'info-text completo' :
-                                  '' }}" 
+                                  '' }}"
                       type="button"
                       (click)="VerBitacora( element )"
                       [routerLink]="[ 'verBitacora', element.contratacionProyectoId ]"
-                      *ngIf="element.mostrarBitacora === true">
+                      *ngIf="element.mostrarBitacora === true || element.cumpleCondicionesTai === true">
         Ver bitácora
         </a>
 
-        <a mat-button color="warn" 
-                      mat-raised-button color="accent" 
-                      class="btn-table" 
+        <a mat-button color="warn"
+                      mat-raised-button color="accent"
+                      class="btn-table"
                       type="button"
                       (click)="openDialogSiNo('', '<b>¿Está seguro de eliminar este registro?</b>',element.seguimientoDiarioId)"
-                      *ngIf="element.seguimientoDiarioId > 0 && element.estadoCodigo === '1'" >
+                      *ngIf="(element.seguimientoDiarioId > 0 && element.estadoCodigo === '1') && element.cumpleCondicionesTai === false" >
         Eliminar registro
         </a>
 
-        <a mat-button color="warn" 
-                      mat-raised-button color="accent" 
-                      class="btn-table" 
+        <a mat-button color="warn"
+                      mat-raised-button color="accent"
+                      class="btn-table"
                       type="button"
-                      (click)="Editar( element )" 
-                      *ngIf="element.seguimientoDiarioId > 0 && element.estadoCodigo === '1' ">
+                      (click)="Editar( element )"
+                      *ngIf="(element.seguimientoDiarioId > 0 && element.estadoCodigo === '1') && element.cumpleCondicionesTai === false">
         Ver detalle/Editar
         </a>
 
